Bug fixed in documentation